2005-11-29  Christian Persch  <chpe@cvs.gnome.org>

	* src/pdm-dialog.c: (pdm_dialog_cookie_scroll_to):

	Fix transposed arguments.

2005-11-29  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-string.c: (ephy_string_collate_key_for_domain):
	* lib/ephy-string.h:

	Add a method to generate collation keys for domain names.

	* src/pdm-dialog.c: (cookie_search_equal),
	(pdm_dialog_cookies_construct), (cookie_host_to_iter),
	(compare_cookie_host_keys), (pdm_dialog_fill_cookies_list),
	(pdm_dialog_cookies_destruct), (pdm_dialog_cookie_add),
	(pdm_dialog_cookie_scroll_to), (sync_notebook_tab),
	(pdm_dialog_init), (pdm_dialog_finalize), (pdm_dialog_open):
	* src/pdm-dialog.h:
	* src/window-commands.c: (window_cmd_edit_personal_data):

	Open the PDM dialogue on the cookies page scrolled to show the
	cookies of the currently loaded page, if there are any. Sort
	cookies by domain. Allow treeview typeaheadfind search to find
	by substring not prefix.

2005-11-29  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* data/Makefile.am:
	R data/bme.desktop.in:
	A data/bme.desktop.in.in:
	R data/epiphany.desktop.in:
	A data/epiphany.desktop.in.in:

	Remove empty DocPath from desktop files, and add bugzilla version.
	Generate the .in files from configure.

2005-11-28  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Suppress some C++ compiler warnings.

2005-11-28  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* m4/gecko.m4:

	Move more checks to gecko.m4.

2005-11-27  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Correctly save and restore CXXFLAGS.

2005-11-18  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyContentPolicy.cpp:
	* embed/ephy-embed-single.c:
	* embed/ephy-embed-single.h:
	* src/epiphany.defs:

	Add chrome: and resource: to the safe list; otherwise
	forms and scrollbars break. Fixes bug #316498.

2005-11-18  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-extensions-manager.c:
