@@ -1,3 +1,9 @@
+2005-12-04  Christian Persch  <chpe@cvs.gnome.org>
+
+	* embed/mozilla/GtkNSSDialog.cpp:
+
+	Add a comment for translators.
+
 2005-11-29  Christian Persch  <chpe@cvs.gnome.org>
 
 	* src/pdm-dialog.c: (pdm_dialog_cookie_scroll_to):
